--- a/.github/workflows/reusable-tests.yml
+++ b/.github/workflows/reusable-tests.yml
@@ -28,6 +28,11 @@ on:
         required: false
         default: false
         type: boolean
+      build-command:
+        description: 'Command to run build, required if inputs.build is true'
+        required: false
+        default: 'yarn build'
+        type: string
     secrets:
       CODECOV_TOKEN:
         description: The token for the Codevoc, required if inputs.enable-codecov is true
@@ -43,7 +48,9 @@ jobs:
         uses: sapphiredev/.github/actions/install-yarn-dependencies@main
         with:
           node-version: ${{ inputs.node-version }}
-
+      - name: Build
+        if: ${{ inputs.build }}
+        run: ${{ inputs.build-command }}
       - name: Run tests
         run: ${{ inputs.test-command }}
       - name: Codecov Upload
