chore(ci): make test-command optional in reusable-tests.yml workflow file

--- a/.github/workflows/reusable-tests.yml
+++ b/.github/workflows/reusable-tests.yml
@@ -15,7 +15,7 @@ on:
         type: string
       test-command:
         description: 'Command to run tests'
-        required: true
+        required: false
         default: 'yarn test --corevage'
         type: string
       enable-codecov:
