--- a/.github/workflows/reusable-build.yml
+++ b/.github/workflows/reusable-build.yml
@@ -1,4 +1,4 @@
-name: lint
+name: build
 
 on:
   workflow_call:
@@ -18,7 +18,13 @@ on:
         required: false
         default: 'false'
         type: string
+
 jobs:
+  problem-matchers:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Add Tsc problem matcher
+        run: echo "::add-matcher::.github/problemMatchers/tsc.json"
   build:
     name: Building
     uses: wolfstar-project/.github/.github/workflows/reusable-yarn-job.yml@main
