--- a/.github/workflows/reusable-lint.yml
+++ b/.github/workflows/reusable-lint.yml
@@ -13,18 +13,24 @@ on:
         required: false
         default: ubuntu-latest
         type: string
+      with-submodules:
+        description: Whether to include submodules when checking out the repository (default `false`)
+        required: false
+        default: 'false'
+        type: string
 
 jobs:
+  problem-matchers:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Add ESLint problem matcher
+        run: echo "::add-matcher::.github/problemMatchers/eslint.json"
   lint:
     name: Linting
-    runs-on: ${{ inputs.operating-system }}
-    steps:
-     - name: Add problem matchers
-       run: echo "::add-matcher::.github/problemMatchers/eslint.json"
-     - name: Linting
-       uses: wolfstar-project/.github/.github/workflows/reusable-yarn-job.yml@main
-       with:
-            script-name: lint --fix=false
-            operating-system: ${{ inputs.operating-system }}
-            node-version: ${{ inputs.node-version }}
+    uses: wolfstar-project/.github/.github/workflows/reusable-yarn-job.yml@main
+    with:
+      script-name: lint --fix=false
+      operating-system: ${{ inputs.operating-system }}
+      node-version: ${{ inputs.node-version }}
+      with-submodules: ${{ inputs.with-submodules }}
   
