--- a/.github/workflows/reusable-publish-image.yml
+++ b/.github/workflows/reusable-publish-image.yml
@@ -29,6 +29,8 @@ jobs:
           - linux/arm/v6
           - linux/arm/v7
           - linux/arm64
+          - linux/arm64/v7
+          - linux/arm64/v6
     steps:
       - name: Prepare
         run: |
