--- a/.github/workflows/reusable-publish-image.yml
+++ b/.github/workflows/reusable-publish-image.yml
@@ -14,8 +14,8 @@ on:
       platforms:
         required: false
         type: string
-        description: 'The platforms to build the Docker image for available platforms: linux/amd64,linux/arm64 and all platforms: linux/amd64,linux/arm64'
-        default: 'linux/amd64,linux/arm64'
+        description: 'The platforms to build the Docker image for (JSON array with platform and runner)'
+        default: '[{"platform": "linux/amd64", "runner": "ubuntu-latest"}, {"platform": "linux/arm64", "runner": "ubuntu-24.04-arm"}]'
       tag:
         required: false
         type: string
@@ -35,12 +35,12 @@ env:
 
 jobs:
   build:
-    name: Publish WolfStar image to container registries
-    runs-on: ubuntu-latest
+    name: Build ${{ matrix.platform }}
+    runs-on: ${{ matrix.runner }}
     strategy:
       fail-fast: false
       matrix:
-        platform: ${{ fromJson(inputs.platforms)  }}
+        include: ${{ fromJson(inputs.platforms) }}
     steps:
       - name: Prepare
         if: ${{ inputs.enablePlatforms == true }}
@@ -48,13 +48,14 @@ jobs:
           platform=${{ matrix.platform }}
           echo "PLATFORM_PAIR=${platform//\//-}" >> $GITHUB_ENV
 
+      - name: Checkout repository
+        uses: actions/checkout@v6
+
       - name: Extract metadata (tags, labels) for Docker
         id: meta
         uses: docker/metadata-action@v5
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-
-
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
@@ -69,26 +70,14 @@ jobs:
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and export to Docker
-        uses: docker/build-push-action@v6
-        with:
-          load: true
-          tags: ${{ env.IMAGE_NAME }}:test
-
-      - name: Test
-        run: |
-          docker run --rm ${{ env.IMAGE_NAME }}:test
-
       - name: Build and push by digest
         id: build
         uses: docker/build-push-action@v6
         with:
           platforms: ${{ matrix.platform }}
           labels: ${{ steps.meta.outputs.labels }}
-          outputs: type=image,name=${{ env.IMAGE_NAME }},push=true
-          tags: |
-            ${{ env.LATEST_TAG }}
-            ${{ env.HASH_TAG }}
+          tags: ${{ steps.meta.outputs.tags }}
+          outputs: type=image,name=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }},push-by-digest=true,name-canonical=true,push=true
 
       - name: Export digest
         run: |
@@ -98,23 +87,23 @@ jobs:
 
       - name: Upload digest
         uses: actions/upload-artifact@v5
-        env:
-          PLATFORM_PAIR: ${{ env.PLATFORM_PAIR }}
         with:
-          name: digests-${{ env.PLATFORM_PAIR }}
+          name: digests-${{ strategy.job-index }}
           path: /tmp/digests/*
           if-no-files-found: error
           retention-days: 1
 
   merge:
+    name: Create and push manifest list
     runs-on: ubuntu-latest
-    needs:
-      - build
+    needs: build
     steps:
       - name: Download digests
         uses: actions/download-artifact@v6
         with:
           path: /tmp/digests
+          pattern: digests-*
+          merge-multiple: true
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -123,7 +112,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{ env.IMAGE_NAME }}
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3.6.0
@@ -136,7 +125,7 @@ jobs:
         working-directory: /tmp/digests
         run: |
           docker buildx imagetools create $(jq -cr '.tags | map("-t " + .) | join(" ")' <<< "$DOCKER_METADATA_OUTPUT_JSON") \
-            $(printf '${{ env.IMAGE_NAME }}@sha256:%s ' *)
+            $(printf '${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}@sha256:%s ' *)
 
       - name: Inspect image
         run: |
