--- a/.github/workflows/reusable-publish-image.yml
+++ b/.github/workflows/reusable-publish-image.yml
@@ -41,8 +41,6 @@ on:
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ inputs.registryImage || github.repository }}
-  LATEST_TAG: ${{ inputs.registryImage || github.repository }}:${{ inputs.tag }}
-  HASH_TAG: ${{ inputs.registryImage || github.repository }}:${{ inputs.commitHash || github.sha }}
 
 jobs:
   build:
@@ -89,9 +87,6 @@ jobs:
           file: ${{ inputs.dockerFile }}
           platforms: ${{ matrix.platform }}
           labels: ${{ steps.meta.outputs.labels }}
-          tags: |
-            ${{ env.LATEST_TAG }}
-            ${{ env.HASH_TAG }}
           outputs: type=image,name=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }},push-by-digest=true,name-canonical=true,push=true
 
       - name: Export digest
@@ -128,6 +123,9 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: |
+            type=raw,value=${{ inputs.tag }}
+            type=raw,value=${{ inputs.commitHash || github.sha }}
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3.6.0
@@ -144,4 +142,4 @@ jobs:
 
       - name: Inspect image
         run: |
-          docker buildx imagetools inspect ${{ env.LATEST_TAG }}
+          docker buildx imagetools inspect ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ inputs.tag }}
